Modified CommunityJumbo component.

--- a/client/src/components/CommunityJumbotron/style.css
+++ b/client/src/components/CommunityJumbotron/style.css
@@ -1,10 +1,10 @@
 .display-4 {
   text-align: center;
   color: #ed1c24;
-  font-weight: 400;
+  font-weight: bold !important;
 }
 .jumbotron-fluid {
   margin-top: 2%;
   width: 100%;
-  background: none;
+  background: none !important
 }
