--- a/client/src/components/NewsJumbo/style.css
+++ b/client/src/components/NewsJumbo/style.css
@@ -10,6 +10,7 @@ h3 {
   text-align: center;
   font-weight: 400;
   font-size: 40px;
+ padding-top: 10px;
 }
 .newsContainer {
   border-radius: 25px;
