--- a/client/src/components/Signup/style.css
+++ b/client/src/components/Signup/style.css
@@ -1,7 +1,21 @@
 .form input {
     margin: 10px;
 }
-
 .quote {
-    color: red;
+    color: #ed1c24;
+}
+.img-fluid {
+    width: 100%;
+}
+.form {
+    background-color: #121e42;
+    color: white;
+    text-align: center;
+    border-radius: .8rem;
+    margin-top: -150px;
+    padding: 15px;
+}
+.title {
+    font-size: 75px;
+    font-family: 'Times New Roman', Times, serif;
 }
