--- a/client/src/components/Login/style.css
+++ b/client/src/components/Login/style.css
@@ -20,7 +20,7 @@ input {
     margin-top: -50px;
 }
 .form-group {
-    background-color: ed1c24;
+    background-color: #ed1c24;
     border-radius: .8rem;
 }
 .title {
