--- a/client/src/components/CommunityCards/style.css
+++ b/client/src/components/CommunityCards/style.css
@@ -2,7 +2,7 @@
   padding: 15px;
   margin-bottom: 8%;
   margin-top: 8%;
-  /* background-image: url("capitolpaper.png"); */
+  /* background-image: url("../../assets/images/"); */
 }
 .card-title {
   text-align: center;
@@ -15,7 +15,7 @@
   text-align: center;
 }
 .createEvent {
-  /* width: 85%; */
+  width: 85%;
   align-items: center;
   margin-top: 8%;
   background-color: #121e42;
@@ -23,7 +23,6 @@
   font-size: small;
   border-radius: 25px;
   border: 2px solid #121e42;
-  /* width: 120px; */
   height: 45px;
   margin-bottom: 20px;
 }
