--- a/client/src/components/Signup/style.css
+++ b/client/src/components/Signup/style.css
@@ -1,5 +1,4 @@
-
-input {
+.form-control {
     color:#ed1c24;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -10,13 +9,20 @@ input {
     width: 100%;
 }
 .form {
-    background-color: #121e42;
     text-align: center;
     border-radius: .8rem;
-    margin-top: -150px;
-    padding: 15px;
+    margin-top: -200px;
+    padding: 10px;
 }
 .title {
     font-size: 75px;
     font-family: 'Times New Roman', Times, serif;
+    padding-bottom: 10px;
+}
+.label {
+    font-family: 'Times New Roman', Times, serif;
+}
+.container2 {
+    background-color: white;
+    border-radius: .8rem;
 }
